==> KitSprout/SmartIMU/Software/SIMU_ApplicationSTD_kTerminal/Program/modules/imu.c <==
#include "drivers\stm32f4_system.h"
#include "drivers\stm32f4_spi.h"
#include "modules\imu.h"
#include <stdio.h>
#include <string.h>

void IMU_Config( void )
{
  GPIO_InitTypeDef GPIO_InitStruct;

#if defined(__MPU92)
  MPU92_Config();
#endif

#if defined(__LPS22)
  LPS22_Config();
#endif

  /* SPI Clk ******************************************************************/
  IMU_SPIx_CLK_ENABLE();

  /* SPI AF *******************************************************************/
  GPIO_PinAFConfig(IMU_SCK_GPIO_PORT, IMU_SCK_SOURCE, IMU_SCK_AF);
  GPIO_PinAFConfig(IMU_SDO_GPIO_PORT, IMU_SDO_SOURCE, IMU_SDO_AF);
  GPIO_PinAFConfig(IMU_SDI_GPIO_PORT, IMU_SDI_SOURCE, IMU_SDI_AF);

  /* SPI Pin ******************************************************************/
  GPIO_InitStruct.GPIO_Mode  = GPIO_Mode_AF;
  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_100MHz;
  GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStruct.GPIO_PuPd  = GPIO_PuPd_UP;

  GPIO_InitStruct.GPIO_Pin   = IMU_SCK_PIN;
  GPIO_Init(IMU_SCK_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.GPIO_Pin   = IMU_SDO_PIN;
  GPIO_Init(IMU_SDO_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.GPIO_Pin   = IMU_SDI_PIN;
  GPIO_Init(IMU_SDI_GPIO_PORT, &GPIO_InitStruct);

  /* SPI Init ****************************************************************/
  SPI_InitStruct.SPI_Mode              = SPI_Mode_Master;
  SPI_InitStruct.SPI_Direction         = SPI_Direction_2Lines_FullDuplex;
  SPI_InitStruct.SPI_DataSize          = SPI_DataSize_8b;
  SPI_InitStruct.SPI_CPOL              = SPI_CPOL_High;
  SPI_InitStruct.SPI_CPHA              = SPI_CPHA_2Edge;
  SPI_InitStruct.SPI_NSS               = SPI_NSS_Soft;
  SPI_InitStruct.SPI_BaudRatePrescaler = IMU_SPIx_SPEED_LOW;
  SPI_InitStruct.SPI_FirstBit          = SPI_FirstBit_MSB;
  SPI_InitStruct.SPI_CRCPolynomial     = 7;
  SPI_Init(IMU_SPIx, &SPI_InitStruct);

  SPI_Cmd(IMU_SPIx, ENABLE);
}
