==> KitSprout/SmartIMU/Software/SIMU_Application_mahonyFilter/Program/modules/imu.c <==
#include "drivers\stm32f4_system.h"
#include "drivers\stm32f4_spi.h"
#include "modules\imu.h"
#include <stdio.h>
#include <string.h>
#define IMU_SPIx                SPI1
#define IMU_SPIx_CLK_ENABLE()   __HAL_RCC_SPI1_CLK_ENABLE()
#define IMU_SPIx_SPEED_HIGH     SPI_BAUDRATEPRESCALER_2
#define IMU_SPIx_SPEED_LOW      SPI_BAUDRATEPRESCALER_256
#define IMU_SCK_PIN             GPIO_PIN_5
#define IMU_SCK_GPIO_PORT       GPIOA
#define IMU_SCK_AF              GPIO_AF5_SPI1
#define IMU_SDO_PIN             GPIO_PIN_6
#define IMU_SDO_GPIO_PORT       GPIOA
#define IMU_SDO_AF              GPIO_AF5_SPI1
#define IMU_SDI_PIN             GPIO_PIN_7
#define IMU_SDI_GPIO_PORT       GPIOA
#define IMU_SDI_AF              GPIO_AF5_SPI1

void IMU_Config( void )
{
  GPIO_InitTypeDef GPIO_InitStruct;

#if defined(__MPU92)
  MPU92_Config();
#endif

#if defined(__LPS22)
  LPS22_Config();
#endif

  /* SPI Clk ******************************************************************/
  IMU_SPIx_CLK_ENABLE();

  /* SPI Pin ******************************************************************/
  GPIO_InitStruct.Mode      = GPIO_MODE_AF_PP;
  GPIO_InitStruct.Pull      = GPIO_PULLUP;
  GPIO_InitStruct.Speed     = GPIO_SPEED_HIGH;

  GPIO_InitStruct.Pin       = IMU_SCK_PIN;
  GPIO_InitStruct.Alternate = IMU_SCK_AF;
  HAL_GPIO_Init(IMU_SCK_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.Pin       = IMU_SDO_PIN;
  GPIO_InitStruct.Alternate = IMU_SCK_AF;
  HAL_GPIO_Init(IMU_SDO_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.Pin       = IMU_SDI_PIN;
  GPIO_InitStruct.Alternate = IMU_SCK_AF;
  HAL_GPIO_Init(IMU_SDI_GPIO_PORT, &GPIO_InitStruct);

  /* SPI Init ****************************************************************/
  IMU_HandleStruct.Instance               = IMU_SPIx;
  IMU_HandleStruct.Init.Mode              = SPI_MODE_MASTER;
  IMU_HandleStruct.Init.Direction         = SPI_DIRECTION_2LINES;
  IMU_HandleStruct.Init.DataSize          = SPI_DATASIZE_8BIT;
  IMU_HandleStruct.Init.CLKPolarity       = SPI_POLARITY_HIGH;
  IMU_HandleStruct.Init.CLKPhase          = SPI_PHASE_2EDGE;
  IMU_HandleStruct.Init.NSS               = SPI_NSS_SOFT;
  IMU_HandleStruct.Init.BaudRatePrescaler = IMU_SPIx_SPEED_LOW;
  IMU_HandleStruct.Init.FirstBit          = SPI_FIRSTBIT_MSB;
  IMU_HandleStruct.Init.TIMode            = SPI_TIMODE_DISABLE;
  IMU_HandleStruct.Init.CRCCalculation    = SPI_CRCCALCULATION_ENABLE;
  IMU_HandleStruct.Init.CRCPolynomial     = 7;
  HAL_SPI_Init(&IMU_HandleStruct);

  __HAL_SPI_ENABLE(&IMU_HandleStruct);
}
